# v0ice-b0t-ds1

./: .gitignore  CMakeLists.txt  DslConfig.h.in  README.md  clang_format.bash
client/: CMakeLists.txt  README.md
client/include/service/: client.hpp
client/include/utils/: logger.hpp  util.hpp
client/src/: global.cpp  main.cpp
client/src/service/: client.cpp
client/src/utils/: config.cpp  logger.cpp
data/: add.sql  dsl.db  script
data/scripts/: chatTest  dataTest  listenTest  normalTest  officialTest
data/test-scripts/: script01  script02  script03  script04  script05  script06  script07  script08  script09
db/: dsl.db
doc/: notes.md  架构说明.md  测试文档.md  脚本记法.md
example/: main.cpp
include/db/: sqlite.hpp
include/interpreter/: interpreter.hpp
include/parser/: parser.hpp
include/typing/: type.hpp
include/utils/: util.hpp
server/: CMakeLists.txt  README.md
server/include/db/: sqlite.hpp
server/include/interpreter/: interpreter.hpp
server/include/parser/: parser.hpp
server/include/service/: server.hpp
server/include/typing/: type.hpp
server/include/utils/: logger.hpp  util.hpp
server/src/: global.cpp  main.cpp
server/src/db/: db.cpp  sqlgen.cpp
server/src/interpreter/: interpreter.cpp
server/src/parser/: parser.cpp
server/src/service/: server.cpp
server/src/utils/: config.cpp  logger.cpp  string.cpp
src/: global.cpp  main.cpp
src/db/: db.cpp  sqlgen.cpp
src/interpreter/: interpreter.cpp
src/parser/: parser.cpp
src/utils/: string.cpp
test/: CMakeLists.txt
test/test-server-interpreter/: CMakeLists.txt  main.cpp
test/test-server-parser/: CMakeLists.txt  main.cpp
test/test-server-script-parse/: CMakeLists.txt  main.cpp
test/test-string/: CMakeLists.txt  main.cpp
